[package]
name = "spinoso-exception"
version = "0.3.0"
authors = ["Ryan Lopopolo <rjl@hyperbo.la>"]
description = """
Ruby Exception error structs
"""
keywords = ["error", "exception", "no_std", "spinoso"]
categories = ["rust-patterns"]
readme = "README.md"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true

[dependencies]

[dependencies.bstr]
version = "1.2.0"
default-features = false

[dependencies.scolapasta-string-escape]
version = "0.3.0"
path = "../scolapasta-string-escape"
default-features = false

[features]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
