[package]
name = "spinoso-random"
version = "0.5.0"
authors = ["Ryan Lopopolo <rjl@hyperbo.la>"]
description = """
Implementation of Ruby Random Core class.
"""
keywords = ["random", "rand", "rng", "mt", "spinoso"]
categories = ["algorithms", "no-std"]
readme = "README.md"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true

[dependencies]
libm = "0.2.6"

[dependencies.getrandom]
version = "0.3.1"
default-features = false

[dependencies.rand]
version = "0.9.0"
optional = true
default-features = false

[dependencies.rand_core]
version = "0.9.0"
optional = true
default-features = false

[dependencies.rand_mt]
version = "4.2.0"
default-features = false

[features]
default = ["rand-method", "rand_core"]
# Enables range sampling methods for the `rand()` function.
rand-method = ["dep:rand", "rand_core"]
# Enables implementations of `RngCore` on `Random` and `Mt` types.
rand_core = ["dep:rand_core"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
