[package]
name = "spinoso-securerandom"
version = "0.3.0"
authors = ["Ryan Lopopolo <rjl@hyperbo.la>"]
description = """
Secure PRNG backend for Artichoke Ruby, implements 'securerandom' package
"""
keywords = ["artichoke", "rand", "random", "rng", "spinoso"]
categories = ["algorithms"]
readme = "README.md"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true

[dependencies]

[dependencies.base64]
version = "0.22.0"
default-features = false
features = ["alloc"]

[dependencies.getrandom]
version = "0.3.1"
default-features = false

[dependencies.rand]
version = "0.9.0"
default-features = false
features = ["os_rng", "std_rng"]

[dependencies.scolapasta-hex]
version = "0.3.0"
path = "../scolapasta-hex"
default-features = false
features = ["alloc"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
