[package]
name = "spinoso-time"
version = "0.10.0"
authors = ["Ryan Lopopolo <rjl@hyperbo.la>"]
description = """
Datetime handling for Artichoke Ruby
"""
keywords = ["artichoke", "date", "datetime", "spinoso", "time"]
categories = ["date-and-time"]
readme = "README.md"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true

[dependencies]
iana-time-zone = "0.1.58"

[dependencies.strftime-ruby]
version = "1.0.0"
default-features = false
features = ["alloc"]
optional = true

[dependencies.tz-rs]
version = "0.7.0"
optional = true
default-features = false
features = ["std"]

[dependencies.tzdb]
version = "0.7.2"
optional = true
default-features = false

[features]
default = ["tzrs", "tzrs-local"]
tzrs = ["dep:strftime-ruby", "dep:tz-rs", "dep:tzdb"]
tzrs-local = ["tzrs"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
